Fix: Remove float override causing "Document Category" input misalignment

--- a/app/assets/stylesheets/layout/grids/search_result_grid.scss
+++ b/app/assets/stylesheets/layout/grids/search_result_grid.scss
@@ -97,7 +97,6 @@
 
     // Checkboxes
     #conditions_type_input legend, #conditions_small_entity_ids_input legend {
-      float: none;
       padding: 0px;
       margin-bottom: 0px;
 
